--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-# dependencies
-/node_modules
+# Dependencies
+node_modules/
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
 
-# production
-/build
-/dist
+# Production
+/frontend/build
+/frontend/dist
 
-# misc
+# Misc
 .DS_Store
 .env
 .env.local
@@ -18,6 +18,7 @@
 .env.test.local
 .env.production.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -25,5 +26,7 @@ yarn-error.log*
 # IDE
 .idea/
 .vscode/
-*.swp
-*.swo 
+
+# Uploads
+/backend/uploads/*
+!/backend/uploads/.gitkeep 
