--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
         "@emotion/styled": "^11.0.0",
         "@mui/icons-material": "^5.0.0",
         "@mui/material": "^5.0.0",
+        "@types/react-transition-group": "^4.4.12",
         "framer-motion": "^12.10.5",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-intersection-observer": "^9.16.0",
         "react-router-dom": "^6.0.0",
         "react-slick": "^0.29.0",
+        "react-transition-group": "^4.4.5",
         "slick-carousel": "^1.8.1"
     },
     "devDependencies": {
