--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@emotion/react": "^11.0.0",
         "@emotion/styled": "^11.0.0",
+        "@fontsource/montserrat": "^5.2.5",
         "@mui/icons-material": "^5.0.0",
         "@mui/material": "^5.0.0",
         "@types/react-transition-group": "^4.4.12",
