--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@fontsource/montserrat": "^5.2.5",
+    "@fontsource/playfair-display": "^5.2.5",
+    "@fontsource/roboto": "^5.2.5",
     "@mui/lab": "^7.0.0-beta.12",
     "framer-motion": "^12.12.1",
     "react-intersection-observer": "^9.16.0",
