--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,16 +13,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18.x'
+
   build:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18.x'
+
+
   deploy:
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
     - uses: actions/checkout@v4
